fix images path

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 
         <footer>
             <a href="https://www.flaticon.com/br/icones-gratis/facebook" title="facebook ícones">
-                <img class="icones-footer" src="/Imagens/facebook.png" alt="icone-facebook">
+                <img class="icones-footer" src="Imagens/facebook.png" alt="icone-facebook">
             </a>
 
             <a class="icones-footer" href="https://www.flaticon.com/br/icones-gratis/instagram" title="instagram ícones">
-                <img class="icones-footer" src="/Imagens/instagram.png" alt="icone-instagram">
+                <img class="icones-footer" src="Imagens/instagram.png" alt="icone-instagram">
             </a>
 
             <a href="https://www.flaticon.com/br/icones-gratis/linkedin" title="linkedin ícones">
-                <img class="icones-footer" src="/Imagens/linkedin.png" alt="icone-linkedin">
+                <img class="icones-footer" src="Imagens/linkedin.png" alt="icone-linkedin">
             </a>
 
             <a href="https://www.flaticon.com/br/icones-gratis/youtube" title="youtube ícones">
-                <img class="icones-footer" src="/Imagens/youtube.png" alt="icone-youtube">
+                <img class="icones-footer" src="Imagens/youtube.png" alt="icone-youtube">
             </a>
         </footer> 
     </header>
